fix: avoid horizontal scroll

--- a/VBWEB/frontend/src/feature/landing/LandingPage.css
+++ b/VBWEB/frontend/src/feature/landing/LandingPage.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: flex-start;
   width: 100vw;
-  margin: 10px;
 }
 
 .landing-page {
